veriosn par agoogle

--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                                     <img src="./views/images/logoRenova3.png" id="logo" alt="">
 
 
-                                    <div class="more animate-intro">
+                                    <div class="more ">
 
-                                          <a class="button stroke col-twelve columna"
+                                          <a class="button stroke col-six columna"
                                                 onclick="return gtag_report_conversion('https://www.distribuidorarenova.com.ar/views/html/listas.html');"
                                                 href="views/html/listas.html">Lista de precios</a>
-
-                                          <a class="button stroke col-twelve columna" href="./views/html/login.html">
+                                          <span style=" color:transparent">-----</span>
+                                          <a class="button stroke col-six columna" href="./views/html/login.html">
                                                 <button style="all:unset" href="#" name="button1"
                                                       onclick="dataLayer.push({'event': 'button1-click'});">Articulos
                                                       Destacados</button>
@@ -350,7 +350,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                   style="content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: url('views/images/industria.jpg') center/cover; opacity: 0.4; z-index: 0;">
             </div>
             <div
-                  style="content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.5); z-index: 1;">
+                  style="content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.7); z-index: 1;">
             </div>
 
             <div class="row section-intro" style="position: relative; z-index: 2;">
