cambios de estilos varios

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             </div>
       </section>
 
-
+      <div style="border: 3px solid orange; width: 100%;"></div>
       <!-- FLOTA DE CAMIONES
 ================================================== -->
       <section id="services" style="background-image: none !important;">
@@ -454,6 +454,51 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                   </div>
             </div>
       </section>
+      <div style="border: 3px solid orange; width: 100%;"></div>
+      <!-- INDUSTRIA
+================================================== -->
+      <section id="services" style="background-image: none !important;">
+            <div class="overlay" style="background-color: rgba(5, 5, 5, 0.60);"></div>
+
+            <div
+                  style="content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: url('views/images/lubricentro.jpg') center/cover; opacity: 0.4; z-index: 0;">
+            </div>
+
+            <div class="services-wrapper">
+
+                  <div class="services-header">
+
+                        <span class="services-eyebrow">Soluciones Renova</span>
+                        <h1 style="color: #ffffff;"> Todo para tu lubricentro</h1>
+                        <p>
+                              Si tenés un lubricentro, sabés que necesitás variedad de productos y stock confiable.
+                              Distribuimos la gama completa de filtros y lubricantes para que puedas atender a todos tus
+                              clientes.
+                        </p>
+                        <div style="max-width: 800px; margin: 0 auto; text-align: left; padding: 0 20px;">
+                              <ul
+                                    style="font-size: 18px; margin-bottom: 40px; list-style-type: disc; padding-left: 20px;">
+                                    <li style="margin-bottom: 10px; text-shadow: 1px 1px 3px rgba(0,0,0,0.3);">Aceites
+                                          multigrado para autos y motos</li>
+                                    <li style="margin-bottom: 10px; text-shadow: 1px 1px 3px rgba(0,0,0,0.3);">Filtros
+                                          de aceite, aire y combustible para todas las marcas</li>
+                              </ul>
+                        </div>
+                  </div>
+
+                  <div class="services-grid">
+
+                  </div>
+
+                  <div class="services-cta">
+                        <a href="https://wa.me/5491165106333" target="_blank" class="services-button">
+                              Contacto
+                        </a>
+                  </div>
+            </div>
+
+      </section>
+      <div style="border: 3px solid orange; width: 100%;"></div>
 
 
       <!-- AGRO
@@ -503,6 +548,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                   </div>
             </div>
       </section>
+      <div style="border: 3px solid orange; width: 100%;"></div>
 
 
       <!-- INDUSTRIA
@@ -549,48 +595,6 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
       </section>
 
 
-      <!-- INDUSTRIA
-================================================== -->
-      <section id="services" style="background-image: none !important;">
-            <div class="overlay" style="background-color: rgba(5, 5, 5, 0.60);"></div>
-
-            <div
-                  style="content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: url('views/images/lubricentro.jpg') center/cover; opacity: 0.4; z-index: 0;">
-            </div>
-
-            <div class="services-wrapper">
-
-                  <div class="services-header">
-
-                        <span class="services-eyebrow">Soluciones Renova</span>
-                        <h1 style="color: #ffffff;"> Todo para tu lubricentro</h1>
-                        <p>
-                              Si tenés un lubricentro, sabés que necesitás variedad de productos y stock confiable.
-                              Distribuimos la gama completa de filtros y lubricantes para que puedas atender a todos tus
-                              clientes.
-                        </p>
-                        <div style="max-width: 800px; margin: 0 auto; text-align: left; padding: 0 20px;">
-                              <ul
-                                    style="font-size: 18px; margin-bottom: 40px; list-style-type: disc; padding-left: 20px;">
-                                    <li style="margin-bottom: 10px; text-shadow: 1px 1px 3px rgba(0,0,0,0.3);">Aceites
-                                          multigrado para autos y motos</li>
-                                    <li style="margin-bottom: 10px; text-shadow: 1px 1px 3px rgba(0,0,0,0.3);">Filtros
-                                          de aceite, aire y combustible para todas las marcas</li>
-                              </ul>
-                        </div>
-                  </div>
-
-                  <div class="services-grid">
-
-                  </div>
-
-                  <div class="services-cta">
-                        <a href="https://wa.me/5491165106333" target="_blank" class="services-button">
-                              Contacto
-                        </a>
-                  </div>
-            </div>
-      </section>
 
 
 
@@ -693,7 +697,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                                     <div class="form-field">
                                           <button href="#" style="all:unset" name="button1"
                                                 onclick="dataLayer.push({'event': 'button1-click'});"></button>
-                                          <a style="border: 3px solid orange !important; padding:0.5rem; color:white"
+                                          <a style="border: 3px solid orange !important; padding:2rem !important; border-radius: 10px !important; color:white"
                                                 href="mailto:renovafiltros@gmail.com">CONTACTANOS VIA MAIL</a>
                                           </button>
                                           <div id="submit-loader">
@@ -753,10 +757,10 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
                               <button href="#" style="all:unset" name="button1"
                                     onclick="dataLayer.push({'event': 'button1-click'})"></button>
-                              <a style="border: 3px solid orange!important; padding:0.5rem; color:white"
+                              <a style="border: 3px solid orange !important; padding:2rem !important; border-radius: 10px !important; color:white"
                                     href="mailto:renovafiltros@gmail.com">LLAMANOS</a>
                               </button>
-                              </br>
+                              </br> </br>
                               <button href="#" style="all:unset;padding-top:1rem" name="button1"
                                     onclick="dataLayer.push({'event': 'button1-click'});">
                                     <a style="color:white;padding-top:1rem"
